--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,27 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-y: overlay;
+}
+
+body::-webkit-scrollbar {
+  width: 0.8em;
+  position: absolute;
+  margin-left: 0;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(225, 73, 133);
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
 }
 
 a {
